# qml_test

./: .gitignore
youtubeLive/: CMakeLists.txt  DownloadItem.qml  DownloadView.qml  DownloadingView.qml  ParseDialog.qml  clipboard.cpp  clipboard.h  compile.bat  fsdownloader.cpp  fsdownloader.h  main.cpp  main.qml  qml.qrc
youtubeLive/sdk/win/lib/: LibVideoDownload.lib
